--- a/JS30_proj_1/index.html
+++ b/JS30_proj_1/index.html
@@ -52,12 +52,12 @@
         <input type="range" id="volume" min="0" max="1" step="0.01" value="0.5">
     </div>
     
-      <audio data-key="72" src="/assets/sounds/horse.wav"></audio>
-      <audio data-key="82" src="/assets/sounds/rooster.wav"></audio>
-      <audio data-key="66" src="/assets/sounds/rabbit.wav"></audio> <!-- This sound came from youtube. Channel:ProSounds -->
-      <audio data-key="67" src="/assets/sounds/cow.wav"></audio>
-      <audio data-key="83" src="/assets/sounds/sheep.wav"></audio>
-      <audio data-key="80" src="/assets/sounds/pig.mp3"></audio>
+      <audio data-key="72" src="assets/sounds/horse.wav"></audio>
+      <audio data-key="82" src="assets/sounds/rooster.wav"></audio>
+      <audio data-key="66" src="assets/sounds/rabbit.wav"></audio> <!-- This sound came from youtube. Channel:ProSounds -->
+      <audio data-key="67" src="assets/sounds/cow.wav"></audio>
+      <audio data-key="83" src="assets/sounds/sheep.wav"></audio>
+      <audio data-key="80" src="assets/sounds/pig.mp3"></audio>
       <!--  Sound files came from Mixkit and Pixabay-->
 
     <script src="/js/js30_proj1.js"></script>
