--- a/JS30_proj_1/index.html
+++ b/JS30_proj_1/index.html
@@ -60,6 +60,6 @@
       <audio data-key="80" src="assets/sounds/pig.mp3"></audio>
       <!--  Sound files came from Mixkit and Pixabay-->
 
-    <script src="/js/js30_proj1.js"></script>
+    <script src="js/js30_proj1.js"></script>
 </body>
 </html>
