--- a/final/index.html
+++ b/final/index.html
@@ -25,7 +25,7 @@
                 </article>
 
                 <article class="grid-item subtract">
-                    <p id="sub">Substraction</p>
+                    <p id="sub">Subtraction</p>
                 </article>
 
                 <article class="grid-item multi">
