--- a/web112_final/index.html
+++ b/web112_final/index.html
@@ -62,6 +62,20 @@
                 </div>
             </div>
         </div>
+
+        <div class="section">
+            <h2>Section 4: Résumé / Cover Letter </h2>
+            <div class="links">
+                <div>
+                    <h3>Edited Links</h3>
+                    <a href="https://docs.google.com/document/d/1PeZEHa6LPxTNifDdTLe6aapywVQzVQcWLN1VpoLLAfo/edit?usp=sharing" target="_blank">Cover Letter</a>
+
+                    <a href="https://docs.google.com/document/d/1qv5nnqCwTunk6aQneCWqLLL1Bi95_MOebOAx4NyFjl8/edit?usp=sharing" target="_blank">Résumé</a>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
